# marking-on-the-market

./: .gitignore  README.md  database.db  pyproject.toml
app/: negociator.py
app/api/db/: .env  config.py  database.db  dependecies.py  main.py
app/api/db/models/: email.py  tesouro.py  usuario.py
app/api/db/routers/: config.py  logs.py
app/api/db/routers/title/: CRUD.py  (+1 more)
app/email/: read.py
app/email/gmail/: credential.py  read_email.py
app/mathematical_graph/: fabric.py
app/schedules/: __main__.py
app/schedules/src/: scrapt.py  script.py
backend/db/: core.py  database.db  dependencies.py  main.py
backend/db/models/: Treasury_Direct.py
backend/db/routers/: Treasury_Direct.py
backend/script/: __main__.py
backend/script/src/: logging.config  logging_config.py  treasury_direct.py
frontend/: __main__.py
frontend-v2/marcacao-mercado/: package-lock.json  package.json
frontend-v2/marcacao-mercado/src/: App.jsx
frontend-v2/marcacao-mercado/src/components/: Card.jsx
frontend-v2/marcacao-mercado/src/css/: style.css
frontend-v2/marcacao-mercado/src/script/: getData.js
frontend/marcacao-mercado/: index.html
frontend/marcacao-mercado/src/: App.jsx  index.css
frontend/marcacao-mercado/src/components/: Card.jsx
frontend/static/scripts/: main.js
frontend/templates/: details.html  home.html  index.html  titlepublic.html
logs/: tesouro_direto.log.2025-11-24  tesouro_direto.log.2025-11-26  tesouro_direto.log.2025-11-27  tesouro_direto.log.2025-12-01  tesouro_direto.log.2025-12-02  tesouro_direto.log.2025-12-06  tesouro_direto.log.2025-12-09
(+22 files in other folders)
